// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionNav Business Guide Renders a Third-level Section Navigation 1`] = `
<div
  className="sectionNav null null"
  id="article-navigation-desktop"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <a
    className="backLink"
    id="article-navigation-back-button-desktop"
    onClick={[Function]}
    style={Object {}}
  >
    Back to all topics
  </a>
  <span
    id="article-navigation-title-desktop"
  >
    <h3>
      Launch your business
    </h3>
  </span>
  <ul>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-0"
        onClick={[Function]}
        style={Object {}}
      >
        Pick your business location
      </a>
    </li>
    <li
      className="currentNavLink"
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-1"
        onClick={[Function]}
        style={Object {}}
      >
        Choose a business structure
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-2"
        onClick={[Function]}
        style={Object {}}
      >
        Choose your business name
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-3"
        onClick={[Function]}
        style={Object {}}
      >
        Register your business
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-4"
        onClick={[Function]}
        style={Object {}}
      >
        Get federal and state tax ID numbers
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-5"
        onClick={[Function]}
        style={Object {}}
      >
        Apply for licenses and permits
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-6"
        onClick={[Function]}
        style={Object {}}
      >
        Open a business bank account
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-7"
        onClick={[Function]}
        style={Object {}}
      >
        Get business insurance
      </a>
    </li>
  </ul>
</div>
`;

exports[`SectionNav For Partners Renders a Fourth-level Section Navigation 1`] = `
<div
  className="sectionNav null null"
  id="article-navigation-desktop"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <a
    className="backLink"
    id="article-navigation-back-button-desktop"
    onClick={[Function]}
    style={Object {}}
  >
    Back to 7(a) Loans
  </a>
  <span
    id="article-navigation-title-desktop"
  >
    <h3>
      7(a) Loans
    </h3>
  </span>
  <ul>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-0"
        onClick={[Function]}
        style={Object {}}
      >
        Types of 7(a) Loans
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-1"
        onClick={[Function]}
        style={Object {}}
      >
        Operate as a 7(a) Lender
      </a>
    </li>
    <li
      className="currentNavLink"
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-2"
        onClick={[Function]}
        style={Object {}}
      >
        Secondary Markets
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-3"
        onClick={[Function]}
        style={Object {}}
      >
        Training and Courses
      </a>
    </li>
    <li
      className=""
    >
      <a
        className="article-navigation-article-link-desktop"
        id="desktop-article-link-4"
        onClick={[Function]}
        style={Object {}}
      >
        Terms and Eligibility
      </a>
    </li>
  </ul>
</div>
`;
